copyBean 扫描