@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.chy</groupId>
+    <groupId>org.z.chy</groupId>
     <artifactId>lamia</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -33,6 +33,7 @@
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
